code/tui/src/app/fullscreen/snapshots/app__fullscreen__home__tests__home_restored_by_slash_command.snap
---
source: code/tui/src/app/fullscreen/home_tests.rs
expression: rendered
---
  .                                                        [— / —] [Dashboard]  
                                                                                
  ╭──────────────────────────────────────────────────────────────────────────╮  
  │                                                                          │  
  │    ▄  ▄      Ash Code v0.1.0                                             │  
  │  ▗█▛██▜█▖                                                                │  
  │  ▝▜████▛▘    Start a task below, or continue a previous session.         │  
  │    ▝  ▘                                                                  │  
  │              New worktree                                                │  
  │              Resume session                                              │  
  │              Settings                                                    │  
  │              Help and shortcuts                                          │  
  │              Quit                                                        │  
  │                                                                          │  
  ╰──────────────────────────────────────────────────────────────────────────╯  
                                                                                
                                                                                
                                                                                
  ⏸ Manual                          Type a new task · Tab actions · Esc return  
  ────────────────────────────────────────────────────────────────────────────  
  >                                                                             
  ─────────────────────────────────────────────────────────── Automatic model   
                                                                                
  Enter send  ·  Tab actions  ·  / commands
