code/tui/src/app/fullscreen/snapshots/app__fullscreen__home__tests__home_short.snap
---
source: code/tui/src/app/fullscreen/home_tests.rs
expression: text(&buffer)
---
  .                        [Dashboard]  
                                        
  ╭──────────────────────────────────╮  
  │  Ash Code v0.1.0                 │  
  │> Quit                            │  
  ╰──────────────────────────────────╯  
  ⏸ Manual   Type a task · Tab actions  
  ────────────────────────────────────  
  > Build anything                      
  ─────────────────── Automatic model   
                                        
  Enter select · Esc input
