code/tui/src/app/fullscreen/snapshots/app__fullscreen__home__tests__home_worktree_created.snap
---
source: code/tui/src/app/fullscreen/home_tests.rs
expression: "text(&render(&app, 80, 24))"
---
  .                                                        [— / —] [Dashboard]  
                                                                                
  ╭─────┌── Project worktrees ─────────────────────────────────────[✗]─┐─────╮  
  │     │                                                              │     │  
  │    ▄│  ╭─────────────────────────────────────────────────────────╮ │     │  
  │  ▗█▛│  │ Search worktrees                                        │ │     │  
  │  ▝▜█│  ╰─────────────────────────────────────────────────────────╯ │     │  
  │    ▝│  Worktree created. Enter to open it.                         │     │  
  │     │  New worktree  ·  Create at HEAD · no session                │     │  
  │     │  repo  ·  Current · main · /repo                             │     │  
  │     │> topic  ·  Enter to open · main · /worktrees/topic           │     │  
  │     │                                                              │     │  
  │     │                                                              │     │  
  │     │                                                              │     │  
  ╰─────│                                                              │─────╯  
        │                                                              │        
        │                                                              │        
        │                                                              │        
        │                                                              │ction.  
  ──────│  n New worktree · d delete · / search · Esc close            │──────  
  > Buil└──────────────────────────────────────────────────────────────┘        
  ─────────────────────────────────────────────────────────── Automatic model
